--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
   "homepage": "https://github.com/rhaldkhein/react-native-leveldb#readme",
   "peerDependencies": {
     "react": "^16.8",
-    "react-native": ">=0.59"
+    "react-native": ">=0.60"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
     "@babel/runtime": "^7.8.4",
+    "@react-native-community/cli": "^4.13.0",
+    "@react-native-community/cli-platform-android": "^4.13.0",
+    "@react-native-community/cli-platform-ios": "^4.13.0",
     "@react-native-community/eslint-config": "^1.1.0",
     "@types/jest": "^25.2.3",
     "@types/react-native": "^0.63.2",
@@ -43,6 +46,9 @@
     "jest": "^26.6.2",
     "jest-circus": "^26.6.2",
     "metro-react-native-babel-preset": "^0.59.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-native": "^0.63.3",
     "react-test-renderer": "16.13.1",
     "typescript": "^3.8.3"
   }
