--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -1,37 +1,42 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
+    apply from: './rninfo.gradle'
+
+    def androidGradlePluginVersion = rnInfo.isRN62OrHigher ? '3.5.3' : '3.4.2'
+    println "[$project] Resorted to Android Gradle-plugin version $androidGradlePluginVersion"
+
     ext {
-        buildToolsVersion = "29.0.2"
-        minSdkVersion = 16
+        kotlinVersion = '1.3.41'
+        buildToolsVersion = '29.0.3'
         compileSdkVersion = 29
         targetSdkVersion = 29
+        minSdkVersion = 18
     }
+
     repositories {
-        google()
         jcenter()
+        google()
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:3.5.3")
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "com.android.tools.build:gradle:$androidGradlePluginVersion"
+        classpath 'de.undercouch:gradle-download-task:4.0.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
     }
 }
 
 allprojects {
     repositories {
         mavenLocal()
+        jcenter()
+        google()
         maven {
-            // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
-            url("$rootDir/../node_modules/react-native/android")
+            url "$rootDir/../node_modules/react-native/android"
+        }
+        maven {
+            url "$rootDir/../node_modules/detox/Detox-android"
         }
         maven {
             // Android JSC is installed from npm
             url("$rootDir/../node_modules/jsc-android/dist")
         }
-
-        google()
-        jcenter()
-        maven { url 'https://www.jitpack.io' }
     }
 }
