--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Fast and simple key-value pair storage for React Native using LevelDB native binding.",
   "main": "index.js",
   "scripts": {
-    "emu": "emulator @default -dns-server 8.8.8.8",
+    "build": "tsc --outDir dist",
+    "build:e2e": "tsc --outDir example/dist",
+    "build:e2e:android": "npm run build:e2e && cd example && detox build -c android.release",
+    "test:android": "npm run build:e2e:android && cd example && detox test -c android.release",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -28,10 +31,10 @@
     "react-native": ">=0.60"
   },
   "devDependencies": {
-    "eslint": "^6.5.1",
+    "eslint": "^7.12.1",
     "react": "^17.0.1",
     "react-native": "^0.63.3",
-    "typescript": "^3.8.3"
+    "typescript": "^4.0.5"
   },
   "files": [
     "dist"
