--- a/package.json
+++ b/package.json
@@ -31,7 +31,13 @@
     "react-native": ">=0.60"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.6.1",
+    "@typescript-eslint/parser": "^4.6.1",
     "eslint": "^7.12.1",
+    "eslint-config-standard": "^16.0.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
     "react": "^17.0.1",
     "react-native": "^0.63.3",
     "typescript": "^4.0.5"
