--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,9 @@
 {
     "env": {
         "browser": true,
-        "es2021": true
+        "es2021": true,
+        "jest": true,
+        "jest/globals": true
     },
     "extends": [
         "standard"
@@ -12,8 +14,29 @@
         "sourceType": "module"
     },
     "plugins": [
-        "@typescript-eslint"
+        "@typescript-eslint",
+        "jest",
+        "detox"
     ],
     "rules": {
+        "jest/no-disabled-tests": "warn",
+        "jest/no-focused-tests": "error",
+        "jest/no-identical-title": "error",
+        "jest/prefer-to-have-length": "warn",
+        "jest/valid-expect": "error"
+    },
+    "globals": {
+        "it": true,
+        "expect": true,
+        "element": true,
+        "describe": true,
+        "xdescribe": true,
+        "by": true,
+        "device": true,
+        "beforeAll": true,
+        "beforeEach": true,
+        "afterAll": true,
+        "jest": true,
+        "jasmine": true
     }
 }
