--- a/example/package.json
+++ b/example/package.json
@@ -18,8 +18,13 @@
     "clean:android": "pushd android && ./gradlew clean && popd"
   },
   "dependencies": {
+    "assert": "^2.0.0",
+    "events": "^3.2.0",
+    "levelup": "^4.4.0",
     "react": "16.11.x",
-    "react-native": "0.62.x"
+    "react-native": "0.62.x",
+    "react-native-leveldown": "^1.0.0",
+    "util": "^0.12.3"
   },
   "devDependencies": {
     "detox": "^17.11.0",
