--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,8 +4,7 @@
         "es2021": true
     },
     "extends": [
-        "standard",
-        "plugin:mocha/recommended"
+        "standard"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -13,12 +12,13 @@
         "sourceType": "module"
     },
     "plugins": [
-        "@typescript-eslint",
-        "mocha"
+        "@typescript-eslint"
     ],
     "rules": {
-        "mocha/no-mocha-arrows": false
     },
     "globals": {
+        "beforeEach": true,
+        "describe": true,
+        "it": true
     }
 }
