--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "space-before-function-paren": 0
     },
     "globals": {
         "beforeEach": true,
