added test views

--- a/example/package.json
+++ b/example/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "assert": "^2.0.0",
+    "buffer": "^6.0.1",
     "events": "^3.2.0",
     "levelup": "^4.4.0",
     "react": "16.11.x",
