--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native": ">=0.60"
   },
   "devDependencies": {
+    "@types/levelup": "^4.3.0",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
     "eslint": "^7.12.1",
