--- a/example/package.json
+++ b/example/package.json
@@ -1,37 +1,36 @@
 {
-  "name": "example",
-  "version": "17.11.0",
+  "name": "levelstorage",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "emu": "emulator @default -dns-server 1.1.1.1",
-    "and": "react-native run-android",
+    "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "start": "react-native start --reset-cache",
-    "postinstall": "node scripts/postinstall.js",
-    "build:ios": "detox build --configuration ios.sim.debug",
-    "build:android-debug": "detox build --configuration android.emu.debug",
-    "build:android-release": "detox build --configuration android.emu.release",
-    "test:ios": "detox test --configuration ios.sim.debug",
-    "test:android-debug": "detox test --configuration android.emu.debug",
-    "test:android-release": "detox test --configuration android.emu.release",
-    "test:android-release-ci": "detox test --configuration android.emu.release -l verbose --headless --record-logs all --take-screenshots all",
-    "e2e:ios": "npm run build:ios && npm run test:ios",
-    "e2e:android-debug": "npm run build:android-debug && npm run test:android-debug",
-    "e2e:android-release": "npm run build:android-release && npm run test:android-release",
-    "clean:android": "pushd android && ./gradlew clean && popd"
+    "start": "react-native start",
+    "test": "jest",
+    "lint": "eslint ."
   },
   "dependencies": {
     "assert": "^2.0.0",
-    "buffer": "^6.0.1",
     "events": "^3.2.0",
     "levelup": "^4.4.0",
-    "react": "16.11.x",
-    "react-native": "0.62.x",
-    "react-native-leveldown": "^1.0.0",
+    "react": "16.13.1",
+    "react-native": "0.63.3",
+    "react-native-leveldown": "^1.0.1",
     "util": "^0.12.3"
   },
   "devDependencies": {
-    "detox": "^17.11.0",
-    "mocha": "^6.1.3"
+    "@babel/core": "^7.8.4",
+    "@babel/runtime": "^7.8.4",
+    "@react-native-community/eslint-config": "^1.1.0",
+    "babel-jest": "^25.1.0",
+    "detox": "^17.12.0",
+    "eslint": "^6.5.1",
+    "jest": "^26.6.3",
+    "jest-circus": "^26.6.3",
+    "metro-react-native-babel-preset": "^0.59.0",
+    "react-test-renderer": "16.13.1"
+  },
+  "jest": {
+    "preset": "react-native"
   }
 }
