--- a/example/package.json
+++ b/example/package.json
@@ -14,6 +14,7 @@
     "bson": "^4.2.0",
     "events": "^3.2.0",
     "levelup": "^4.4.0",
+    "p-do-whilst": "^1.1.0",
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-leveldown": "^1.0.1",
