--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "assert": "^2.0.0",
     "events": "^3.2.0",
     "levelup": "^4.4.0",
+    "p-do-whilst": "^1.1.0",
     "react-native-leveldown": "^1.0.0",
     "util": "^0.12.3"
   },
