--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "description": "Fast and simple key-value pair storage for React Native using LevelDB native binding.",
   "main": "dist/levelstorage.js",
   "scripts": {
-    "start": "cd example && npm start",
     "android": "cd example && npm run android",
-    "build": "tsc --outDir dist",
-    "build:e2e": "tsc --outDir example/dist",
     "build:e2e:android": "npm run build:e2e && cd example && detox build -c android.release",
     "build:e2e:ios": "npm run build:e2e && cd example && detox build -c ios.release",
+    "build:e2e": "tsc --outDir example/dist",
+    "build": "tsc --outDir dist",
+    "doc": "typedoc",
     "postinstall": "cd example && npm install",
+    "prepare": "npm run build",
+    "start": "cd example && npm start",
     "test:android": "npm run build:e2e:android && cd example && detox test -c android.release",
     "test:ios": "npm run build:e2e:ios && cd example && detox test -c ios.release",
-    "test": "echo \"Error: use test:android or test:ios\" && exit 1",
-    "doc": "typedoc"
+    "test": "echo \"Error: use test:android or test:ios\" && exit 1"
   },
   "repository": {
     "type": "git",
