--- a/package.json
+++ b/package.json
@@ -37,12 +37,11 @@
     "events": "^3.2.0",
     "levelup": "^4.4.0",
     "p-do-whilst": "^1.1.0",
-    "react-native-leveldown": "^1.0.0",
     "util": "^0.12.3"
   },
   "peerDependencies": {
-    "react": "^16.8",
-    "react-native": ">=0.60"
+    "react-native": ">=0.60.0 <1.0.x",
+    "react-native-leveldown": ">=1.0.0"
   },
   "devDependencies": {
     "@types/levelup": "^4.3.0",
