--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:e2e:ios": "npm run build:e2e && cd example && detox build -c ios.release",
     "build:e2e": "tsc --outDir example/dist",
     "build": "tsc --outDir dist",
-    "doc": "typedoc",
+    "doc": "del docs && typedoc",
     "prepare": "npm run build",
     "start": "cd example && npm start",
     "test:android": "npm run build:e2e:android && cd example && detox test -c android.release",
@@ -47,6 +47,7 @@
     "@types/levelup": "^4.3.0",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
+    "del-cli": "^3.0.1",
     "eslint": "^7.12.1",
     "eslint-config-standard": "^16.0.1",
     "eslint-plugin-import": "^2.22.1",
